--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
   "expo": {
-    "name": "ups-youtube-clone-rn",
-    "slug": "ups-youtube-clone-rn",
+    "name": "ups-clone-rn",
+    "slug": "ups-clone-rn",
     "version": "1.0.0",
     "orientation": "portrait",
     "icon": "./assets/icon.png",
